--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -3275,75 +3275,17 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "import torch.optim as optim\n",
-        "from torch.utils.data import Dataset, DataLoader\n",
-        "from torchvision import transforms, models\n",
-        "from sklearn.metrics import (\n",
-        "    accuracy_score,\n",
-        "    precision_recall_fscore_support,\n",
-        "    roc_auc_score,\n",
-        "    matthews_corrcoef,\n",
-        "    confusion_matrix\n",
-        ")\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "\n",
-        "# Step 5: Preprocessing\n",
-        "class AlzheimerDataset(Dataset):\n",
-        "    def __init__(self, images, labels, transform=None):\n",
-        "        self.images = images\n",
-        "        self.labels = labels\n",
-        "        self.transform = transform or transforms.Compose([\n",
-        "            transforms.ToPILImage(),\n",
-        "            transforms.Resize((224, 224)),\n",
-        "            transforms.Grayscale(3),  # Convert to 3-channel for pretrained models\n",
-        "            transforms.ToTensor(),\n",
-        "            transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
-        "        ])\n",
-        "\n",
-        "    def __len__(self):\n",
-        "        return len(self.images)\n",
-        "\n",
-        "    def __getitem__(self, idx):\n",
-        "        image = self.transform(self.images[idx])\n",
-        "        label = self.labels[idx]\n",
-        "        return image, label\n",
-        "\n",
-        "# Step 6: Model Definition (Using U-Net inspired transfer learning)\n",
-        "class AlzheimerClassifier(nn.Module):\n",
-        "    def __init__(self, num_classes=4):\n",
-        "        super().__init__()\n",
-        "        # Use a pretrained model as feature extractor\n",
-        "        self.base_model = models.resnet50(pretrained=True)\n",
-        "\n",
-        "        # Modify final layer for our specific classification task\n",
-        "        num_features = self.base_model.fc.in_features\n",
-        "        self.base_model.fc = nn.Sequential(\n",
-        "            nn.Linear(num_features, 512),\n",
-        "            nn.ReLU(),\n",
-        "            nn.Dropout(0.5),\n",
-        "            nn.Linear(512, num_classes)\n",
-        "        )\n",
-        "\n",
-        "    def forward(self, x):\n",
-        "        return self.base_model(x)\n",
-        "\n"
+        "## NEW"
       ],
       "metadata": {
-        "id": "6QeToFldDX4N"
-      },
-      "execution_count": 6,
-      "outputs": []
+        "id": "gAY_z9qBFTAU"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "import torch\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
@@ -3360,30 +3302,126 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "from PIL import Image\n",
+        "from PIL import Image, ImageOps\n",
+        "import tensorflow as tf\n",
+        "from collections import Counter\n",
+        "from datasets import load_dataset\n",
         "\n",
-        "# Same AlzheimerDataset and AlzheimerClassifier classes as before\n",
+        "# Step 3: Data Augmentation\n",
+        "def to_grayscale(image):\n",
+        "    if isinstance(image, np.ndarray):\n",
+        "        if len(image.shape) == 3 and image.shape[-1] == 3:\n",
+        "            image = np.dot(image[..., :3], [0.2989, 0.5870, 0.1140]).astype(np.uint8)\n",
+        "    else:\n",
+        "        image = ImageOps.grayscale(image)\n",
+        "    return image\n",
         "\n",
+        "def augment_image(image):\n",
+        "    if not isinstance(image, np.ndarray):\n",
+        "        image = np.array(image)\n",
+        "\n",
+        "    if len(image.shape) == 2:\n",
+        "        image = np.expand_dims(image, axis=-1)\n",
+        "\n",
+        "    image = np.expand_dims(image, axis=0)\n",
+        "\n",
+        "    datagen = tf.keras.preprocessing.image.ImageDataGenerator(\n",
+        "        rotation_range=15,\n",
+        "        width_shift_range=0.1,\n",
+        "        height_shift_range=0.1,\n",
+        "        horizontal_flip=True,\n",
+        "        brightness_range=[0.8, 1.2],\n",
+        "        zoom_range=0.2,\n",
+        "    )\n",
+        "\n",
+        "    augmented_image = next(datagen.flow(image, batch_size=1))[0]\n",
+        "    return augmented_image\n",
+        "\n",
+        "def augment_dataset(dataset):\n",
+        "    augmentation_ratios = {0: 7, 1: 102, 2: 2, 3: 3}\n",
+        "    augmented_images, augmented_labels = [], []\n",
+        "\n",
+        "    for example in dataset:\n",
+        "        original_image = example['image']\n",
+        "        label = example['label']\n",
+        "\n",
+        "        original_grayscale = to_grayscale(original_image)\n",
+        "        num_augmented = augmentation_ratios.get(label, 1)\n",
+        "\n",
+        "        for _ in range(num_augmented):\n",
+        "            augmented_image = augment_image(original_grayscale)\n",
+        "            augmented_images.append(augmented_image)\n",
+        "            augmented_labels.append(label)\n",
+        "\n",
+        "    return augmented_images, augmented_labels\n",
+        "\n",
+        "# Step 4-5: Data Preparation and Preprocessing\n",
+        "class AlzheimerDataset(Dataset):\n",
+        "    def __init__(self, images, labels, transform=None):\n",
+        "        self.images = [np.array(img) if isinstance(img, Image.Image) else img for img in images]\n",
+        "        self.labels = labels\n",
+        "\n",
+        "        self.transform = transform or transforms.Compose([\n",
+        "            transforms.ToPILImage(),\n",
+        "            transforms.Resize((224, 224)),\n",
+        "            transforms.Grayscale(3),\n",
+        "            transforms.ToTensor(),\n",
+        "            transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
+        "        ])\n",
+        "\n",
+        "    def __len__(self):\n",
+        "        return len(self.images)\n",
+        "\n",
+        "    def __getitem__(self, idx):\n",
+        "        image = self.images[idx]\n",
+        "        if not isinstance(image, np.ndarray):\n",
+        "            image = np.array(image)\n",
+        "\n",
+        "        if len(image.shape) == 2:\n",
+        "            image = np.expand_dims(image, axis=-1)\n",
+        "\n",
+        "        if image.shape[-1] == 3:\n",
+        "            image = image[:,:,0]\n",
+        "\n",
+        "        image = image.astype(np.uint8)\n",
+        "\n",
+        "        transformed_image = self.transform(image)\n",
+        "        label = self.labels[idx]\n",
+        "        return transformed_image, label\n",
+        "\n",
+        "# Step 6: Model Definition\n",
+        "class AlzheimerClassifier(nn.Module):\n",
+        "    def __init__(self, num_classes=4):\n",
+        "        super().__init__()\n",
+        "        self.base_model = models.resnet50(pretrained=True)\n",
+        "        num_features = self.base_model.fc.in_features\n",
+        "        self.base_model.fc = nn.Sequential(\n",
+        "            nn.Linear(num_features, 512),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Dropout(0.5),\n",
+        "            nn.Linear(512, num_classes)\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        return self.base_model(x)\n",
+        "\n",
+        "# Step 7-8: Training and Evaluation\n",
         "def train_and_evaluate(all_images, all_labels, test_size=0.2, random_state=42):\n",
-        "    # Split the data into train and test sets\n",
         "    train_images, test_images, train_labels, test_labels = train_test_split(\n",
         "        all_images, all_labels, test_size=test_size, random_state=random_state, stratify=all_labels\n",
         "    )\n",
         "\n",
-        "    # Data preparation\n",
         "    train_dataset = AlzheimerDataset(train_images, train_labels)\n",
         "    test_dataset = AlzheimerDataset(test_images, test_labels)\n",
         "\n",
         "    train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
         "    test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)\n",
         "\n",
-        "    # Model, loss, and optimizer\n",
         "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "    model = AlzheimerClassifier().to(device)\n",
         "    criterion = nn.CrossEntropyLoss()\n",
         "    optimizer = optim.Adam(model.parameters(), lr=0.0001)\n",
         "\n",
-        "    # Training (rest of the code remains the same as in previous artifact)\n",
         "    epochs = 50\n",
         "    train_losses, train_accuracies = [], []\n",
         "\n",
@@ -3411,7 +3449,6 @@
         "\n",
         "        print(f'Epoch {epoch+1}/{epochs}, Loss: {train_loss:.4f}, Accuracy: {train_accuracy:.4f}')\n",
         "\n",
-        "    # Evaluation\n",
         "    model.eval()\n",
         "    all_preds, all_labels = [], []\n",
         "\n",
@@ -3424,7 +3461,6 @@
         "            all_preds.extend(preds.cpu().numpy())\n",
         "            all_labels.extend(labels.cpu().numpy())\n",
         "\n",
-        "    # Compute metrics\n",
         "    accuracy = accuracy_score(all_labels, all_preds)\n",
         "    precision, recall, f1, _ = precision_recall_fscore_support(all_labels, all_preds, average='weighted')\n",
         "\n",
@@ -3439,9 +3475,29 @@
         "\n",
         "    mcc = matthews_corrcoef(all_labels, all_preds)\n",
         "\n",
-        "    # Confusion Matrix and Training Metrics Plotting (same as before)\n",
+        "    # Confusion Matrix\n",
+        "    cm = confusion_matrix(all_labels, all_preds)\n",
+        "    plt.figure(figsize=(10, 8))\n",
+        "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
+        "    plt.title('Confusion Matrix')\n",
+        "    plt.ylabel('True Label')\n",
+        "    plt.xlabel('Predicted Label')\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
         "\n",
-        "    # Return detailed metrics\n",
+        "    # Training Metrics\n",
+        "    plt.figure(figsize=(12, 4))\n",
+        "    plt.subplot(1, 2, 1)\n",
+        "    plt.plot(train_losses)\n",
+        "    plt.title('Training Loss')\n",
+        "    plt.xlabel('Epoch')\n",
+        "    plt.subplot(1, 2, 2)\n",
+        "    plt.plot(train_accuracies)\n",
+        "    plt.title('Training Accuracy')\n",
+        "    plt.xlabel('Epoch')\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "\n",
         "    return {\n",
         "        'accuracy': accuracy,\n",
         "        'precision': precision,\n",
@@ -3451,8 +3507,24 @@
         "        'mcc': mcc\n",
         "    }\n",
         "\n",
-        "# Main execution remains the same\n",
         "def main():\n",
+        "    # Load dataset\n",
+        "    dataset = load_dataset('Falah/Alzheimer_MRI', split='train')\n",
+        "\n",
+        "    # Print initial label distribution\n",
+        "    initial_labels = [example['label'] for example in dataset]\n",
+        "    print(\"Initial Label Distribution:\", Counter(initial_labels))\n",
+        "\n",
+        "    # Augment dataset\n",
+        "    augmented_images, augmented_labels = augment_dataset(dataset)\n",
+        "\n",
+        "    # Combine original and augmented data\n",
+        "    all_images = list(dataset['image']) + augmented_images\n",
+        "    all_labels = initial_labels + augmented_labels\n",
+        "\n",
+        "    print(\"Augmented Label Distribution:\", Counter(all_labels))\n",
+        "\n",
+        "    # Train and evaluate\n",
         "    metrics = train_and_evaluate(all_images, all_labels)\n",
         "\n",
         "    print(\"\\nModel Evaluation Metrics:\")\n",
@@ -3463,15 +3535,22 @@
         "    main()"
       ],
       "metadata": {
-        "id": "8AVyPVe6DrkE",
-        "outputId": "69bfc87c-295c-4cd0-c2c1-9e5d19273251",
+        "id": "Hr1WfGbpFUFq",
+        "outputId": "f81c969a-2edf-4219-be81-966ac155eb49",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 428
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Initial Label Distribution: Counter({2: 2566, 3: 1781, 0: 724, 1: 49})\n",
+            "Augmented Label Distribution: Counter({2: 7698, 3: 7124, 0: 5792, 1: 5047})\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stderr",
@@ -3481,30 +3560,8 @@
             "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet50_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet50_Weights.DEFAULT` to get the most up-to-date weights.\n",
             "  warnings.warn(msg)\n"
           ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-12-90c42471f09b>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    116\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 118\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-12-90c42471f09b>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[0;31m# Main execution remains the same\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    110\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 111\u001b[0;31m     \u001b[0mmetrics\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_and_evaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mall_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    112\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    113\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\nModel Evaluation Metrics:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-12-90c42471f09b>\u001b[0m in \u001b[0;36mtrain_and_evaluate\u001b[0;34m(all_images, all_labels, test_size, random_state)\u001b[0m\n\u001b[1;32m     56\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 58\u001b[0;31m             \u001b[0mtotal_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     59\u001b[0m             \u001b[0mtotal_correct\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "AlWaf7BBD5ot"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
