--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -1838,7 +1838,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 434,
+          "height": 423,
           "referenced_widgets": [
             "ab52ab785cf84736b557c6fa18968f20",
             "09b96bd9b01a4259a0aa3357303986cd",
@@ -2714,7 +2714,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 606
+          "height": 624
         },
         "id": "5-cBopVzRcjM",
         "outputId": "c7cdff21-a89d-4887-e463-c934dbe0b52c"
@@ -2775,7 +2775,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 776
+          "height": 860
         },
         "id": "IorQ_2v8SnG7",
         "outputId": "b27b3ce5-ab07-4d3c-f690-9ff07b7574f6"
@@ -3621,6 +3621,142 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "from torch.utils.data import Dataset, DataLoader\n",
+        "from torchvision import transforms, models\n",
+        "from sklearn.metrics import (\n",
+        "    accuracy_score, precision_recall_fscore_support, roc_auc_score, matthews_corrcoef, confusion_matrix\n",
+        ")\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from PIL import Image, ImageOps\n",
+        "import tensorflow as tf\n",
+        "from collections import Counter\n",
+        "from datasets import load_dataset\n",
+        "\n",
+        "# Step 3: Data Augmentation (same as before)\n",
+        "# ...\n",
+        "\n",
+        "# Step 4-5: Data Preparation and Preprocessing (same as before)\n",
+        "# ...\n",
+        "\n",
+        "# Step 6: Model Definition (same as before)\n",
+        "# ...\n",
+        "\n",
+        "# Step 7-8: Training and Evaluation\n",
+        "def train_and_evaluate(train_images, train_labels, test_images, test_labels):\n",
+        "    train_dataset = AlzheimerDataset(train_images, train_labels)\n",
+        "    test_dataset = AlzheimerDataset(test_images, test_labels)\n",
+        "\n",
+        "    train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+        "    test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)\n",
+        "\n",
+        "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "    model = AlzheimerClassifier().to(device)\n",
+        "    criterion = nn.CrossEntropyLoss()\n",
+        "    optimizer = optim.Adam(model.parameters(), lr=0.0001)\n",
+        "\n",
+        "    epochs = 5\n",
+        "    train_losses, train_accuracies = [], []\n",
+        "\n",
+        "    for epoch in range(epochs):\n",
+        "        model.train()\n",
+        "        total_loss, total_correct = 0, 0\n",
+        "\n",
+        "        for images, labels in train_loader:\n",
+        "            images, labels = images.to(device), labels.to(device)\n",
+        "            optimizer.zero_grad()\n",
+        "            outputs = model(images)\n",
+        "            loss = criterion(outputs, labels)\n",
+        "            loss.backward()\n",
+        "            optimizer.step()\n",
+        "\n",
+        "            total_loss += loss.item()\n",
+        "            total_correct += (outputs.argmax(1) == labels).sum().item()\n",
+        "\n",
+        "        train_loss = total_loss / len(train_loader)\n",
+        "        train_accuracy = total_correct / len(train_dataset)\n",
+        "\n",
+        "        train_losses.append(train_loss)\n",
+        "        train_accuracies.append(train_accuracy)\n",
+        "\n",
+        "        print(f'Epoch {epoch+1}/{epochs}, Loss: {train_loss:.4f}, Accuracy: {train_accuracy:.4f}')\n",
+        "\n",
+        "    model.eval()\n",
+        "    all_preds, all_labels = [], []\n",
+        "\n",
+        "    with torch.no_grad():\n",
+        "        for images, labels in test_loader:\n",
+        "            images, labels = images.to(device), labels.to(device)\n",
+        "            outputs = model(images)\n",
+        "            preds = outputs.argmax(1)\n",
+        "\n",
+        "            all_preds.extend(preds.cpu().numpy())\n",
+        "            all_labels.extend(labels.cpu().numpy())\n",
+        "\n",
+        "    accuracy = accuracy_score(all_labels, all_preds)\n",
+        "    precision, recall, f1, _ = precision_recall_fscore_support(all_labels, all_preds, average='weighted')\n",
+        "\n",
+        "    try:\n",
+        "        auc = roc_auc_score(\n",
+        "            torch.nn.functional.one_hot(torch.tensor(all_labels)).numpy(),\n",
+        "            torch.nn.functional.softmax(torch.tensor(outputs), dim=1).cpu().numpy(),\n",
+        "            multi_class='ovr'\n",
+        "        )\n",
+        "    except:\n",
+        "        auc = None\n",
+        "\n",
+        "    mcc = matthews_corrcoef(all_labels, all_preds)\n",
+        "\n",
+        "    # Confusion Matrix and Training Metrics Plotting (same as before)\n",
+        "\n",
+        "    return {\n",
+        "        'accuracy': accuracy,\n",
+        "        'precision': precision,\n",
+        "        'recall': recall,\n",
+        "        'f1_score': f1,\n",
+        "        'auc': auc,\n",
+        "        'mcc': mcc\n",
+        "    }\n",
+        "\n",
+        "def main():\n",
+        "    # Load training and test datasets\n",
+        "    train_dataset = load_dataset('Falah/Alzheimer_MRI', split='train')\n",
+        "    test_dataset = load_dataset('Falah/Alzheimer_MRI', split='test')\n",
+        "\n",
+        "    # Augment training dataset\n",
+        "    augmented_train_images, augmented_train_labels = augment_dataset(train_dataset)\n",
+        "\n",
+        "    # Combine original and augmented training data\n",
+        "    all_train_images = list(train_dataset['image']) + augmented_train_images\n",
+        "    all_train_labels = list(train_dataset['label']) + augmented_train_labels\n",
+        "\n",
+        "    # Prepare test dataset\n",
+        "    test_images = list(test_dataset['image'])\n",
+        "    test_labels = list(test_dataset['label'])\n",
+        "\n",
+        "    # Train and evaluate\n",
+        "    metrics = train_and_evaluate(all_train_images, all_train_labels, test_images, test_labels)\n",
+        "\n",
+        "    print(\"\\nModel Evaluation Metrics:\")\n",
+        "    for metric, value in metrics.items():\n",
+        "        print(f\"{metric.upper()}: {value}\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "kyOqcyvcWww8"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
